fix: add get device by login user
